Fix the vertical center alignment issue In table and nav for Safari

--- a/src/components/dashboard/navbar/navbar.css
+++ b/src/components/dashboard/navbar/navbar.css
@@ -29,7 +29,7 @@
 }
 
 .centerThis{
-    display: table-cell;
+    /*display: table-cell;*/
     vertical-align: middle;
 }
 
